# samurai_warriors_2_empires_recomp

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  disable_boot_movies.bat  restore_boot_movies.bat  run_recomp.bat  run_recomp_gpu_trace.bat  run_recomp_native_events.bat  run_recomp_native_gameplay_capture.bat  run_recomp_native_gap_sample_probe.bat  run_recomp_native_projected_gap_replay.bat  run_recomp_native_transform_probe.bat  run_recomp_native_transform_probe.ps1  run_recomp_visible_cursor.bat  samurai_warriors_2_empires_manifest.toml
docs/: debug_dev_tooling_modding_priorities.md  external_tooling.md  function_map.generated.csv  modding_support.md  native_renderer_plan.md  recomp_findings.md  runtime_hooks.md
mods/loose/: README.md
src/: main.cpp  samurai_warriors_2_empires_app.h
tools/: apply_ida_labels.ps1  apply_rexglue_native_render_wide_constants.ps1  build_linkdata_asset_manifest.ps1  build_linkdata_entry_patch.ps1  compress_lzp2_literal.ps1  decompress_lzp2.ps1  export_function_map.ps1  export_g1m_obj.py  export_native_gap_obj.py  export_native_texture_dds.py  extract_linkdata_bns.ps1  move_recomp_window.ps1  pack_003b59_container.ps1  pack_offset_table_container.ps1  patch_g1m_from_obj.py  pulse_recomp_input.ps1  repack_linkdata_bns.ps1  replay_native_menu_draws.py  scan_g1m.ps1  scan_linkdata_bns.ps1  scan_scenario_control_table.py  scan_stage_bundle.ps1  split_003b59_container.ps1  split_offset_table_container.ps1  split_scenario_blob.py  summarize_gpu_trace.py  summarize_native_render_events.py  sync_ida_source_ownership.ps1
(+11 files in other folders)
